auth, admin initialized

--- a/views/pages/searchResults.ejs
+++ b/views/pages/searchResults.ejs
@@ -47,7 +47,7 @@
                     <% } %> 
                         <th><%= row.code %></th>
                         <td>
-                            <a class="inline-link" href="product/<%= row.code %>">
+                            <a class="inline-link" href="product?code=<%= row.code %>">
                                 <%= row.name %>
                             </a>
                         </td>
