--- a/views/pages/404.ejs
+++ b/views/pages/404.ejs
@@ -8,8 +8,8 @@
     <h3>Помилка 404.</h3>
     <p style="font-size: 5em;">👾</p>
     <p>Сторінка, яку ви намагались відвідати, не існує.</p>
-    <a href="/search" class="btn btn-primary">
-        До вікна пошуку
+    <a href="javascript:history.back()" class="btn btn-primary">
+        Назад
     </a>
 </body>
 </html>
