--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -6,6 +6,9 @@
 </head>
 <body style="margin: 1em;">
     <form method="POST">
+        <% if (messages.error) { %> 
+            <div class="alert alert-warning"><%= messages.error %></div> 
+        <% } %>
         <div class="input-group mb-3">
           <label for="nameInput" class="input-group-text">E-mail</label>
           <input type="text" class="form-control" name="email">
