--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -3,5 +3,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Bootstrap -->
-<script language="javascript" src="js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="css/bootstrap.min.css"/>
+<script language="javascript" src="/bootstrap/bootstrap.min.js"></script>
+<link rel="stylesheet" href="/bootstrap/bootstrap.min.css"/>
