--- a/views/pages/en/home.ejs
+++ b/views/pages/en/home.ejs
@@ -5,17 +5,20 @@
     <title>Storage-seeker</title>
 </head>
 <body style="margin: 1em;">
-    <div style="display: inline-block; width: 100%;">
+    <div style="width: 100%;">
         <% if (userStatus > 0) { %>
-            <h3 style="display: inline-flex;">Welcome, <%= userFirstName %>!</h3>
+            <h3 style="text-align: center;">Welcome, <%= userFirstName %>!</h3>
         <% } %>
         <% if (userStatus === 0) { %>
-            <h3 style="display: inline-flex;">Welcome to Storage-seeker!</h3>
+            <h3 style="text-align: center;">Welcome to Storage-seeker!</h3>
         <% } %>
-        <div style="display: inline-flex;" class="form-check form-switch">
-            <input class="form-check-input" type="checkbox" id="languageToggle" onClick="location.href='../ua'">
-            <label class="form-check-label" for="languageToggle">🇺🇦</label>
+        <div style="width: 100%; text-align: end;">
+            <div style="display: inline-flex;" class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="languageToggle" onClick="location.href='../ua'">
+                <label class="form-check-label" for="languageToggle">🇺🇦</label>
+            </div>
         </div>
+
     </div>
     <% if (userStatus === 0) { %>
         <a href="/en/user/login" class="btn btn-primary" style="width: 100%;">
