--- a/views/pages/ua/home.ejs
+++ b/views/pages/ua/home.ejs
@@ -5,16 +5,18 @@
     <title>Storage-seeker</title>
 </head>
 <body style="margin: 1em;">
-    <div style="display: inline-block; width: 100%;">
+    <div style="width: 100%;">
         <% if (userStatus > 0) { %>
-            <h3 style="display: inline-flex;">Вітаємо, <%= userFirstName %>!</h3>
+            <h3 style="text-align: center;">Вітаємо, <%= userFirstName %>!</h3>
         <% } %>
         <% if (userStatus === 0) { %>
-            <h3 style="display: inline-flex;">Вітаємо у Storage-seeker!</h3>
+            <h3 style="text-align: center;">Вітаємо у Storage-seeker!</h3>
         <% } %>
-        <div style="display: inline-flex;" class="form-check form-switch">
-            <input class="form-check-input" type="checkbox" id="languageToggle" onClick="location.href='../en'">
-            <label class="form-check-label" for="languageToggle">🇬🇧</label>
+        <div style="width: 100%; text-align: end;">
+            <div style="display: inline-flex;" class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="languageToggle" onClick="location.href='../en'">
+                <label class="form-check-label" for="languageToggle">🇬🇧</label>
+            </div>
         </div>
     </div>
     <% if (userStatus === 0) { %>
