--- a/views/pages/ua/login.ejs
+++ b/views/pages/ua/login.ejs
@@ -6,12 +6,24 @@
 </head>
 <body style="margin: 1em;">
     <form method="POST">
-        <% if (messages.error) { %> 
-            <div class="alert alert-warning"><%= messages.error %></div> 
+        <%  if (messages.error) {
+                const passportMessage = messages.error[0];
+                let textMessage = '';
+                
+                if (passportMessage === '1') {
+                    textMessage = 'Помилка бази даних';
+                }
+                if (passportMessage === '2') {
+                    textMessage = 'Пароль хибний';
+                }
+                if (passportMessage === '3') {
+                    textMessage = 'Введена ел. пошта не зареєстрована';
+                } %> 
+            <div class="alert alert-warning"><%= textMessage %></div> 
         <% } %>
         <div class="input-group mb-3">
-          <label for="nameInput" class="input-group-text">E-mail</label>
-          <input type="text" class="form-control" name="email">
+            <label for="nameInput" class="input-group-text">E-mail</label>
+            <input type="text" class="form-control" name="email">
         </div>
 
         <div class="input-group mb-3">
